# Distributed-Flight-Management-System

./: Cargo.toml  README.md  docker-compose.yml  pruebas.txt
certificates/: certificate.pem  openssl.cnf
flight_app/: Cargo.toml  Dockerfile  walkers.md
flight_simulator/: Cargo.toml
inicializator/: Cargo.toml
node/: Cargo.toml  Dockerfile  config.yaml  entrypoint.sh  exit_node.sh  pause_node.sh  resume_node.sh  send_command.sh  state_node.sh  test_autorize.jsonThreadId(18).json  test_autorize.jsonThreadId(20).json  test_get_keyspace.jsonThreadId(19).json  test_get_keyspace.jsonThreadId(22).json  (+8 more)
node_handler/: Cargo.toml  (+1 more)
ui/: Cargo.toml  walkers.md
ui/src/: airport.rs  airport_selection.rs  airports.rs  cassandra_client.rs  flight.rs  flight_app.rs  flight_status.rs  flights.rs  information.rs  lib.rs  main.rs  map.rs  windows.rs
ui/src/airport/: airport.rs  airports.rs
ui/src/airport_implementation/: airport.rs  airports.rs  mod.rs
ui/src/app_implementation/: app_updater.rs  flight_app.rs  mod.rs  thread_pool.rs
ui/src/cassandra_comunication/: cassandra_client.rs  cassandra_connector.rs  mod.rs  thread_pool_client.rs  ui_client.rs
ui/src/certificates/: private_key.pem
ui/src/flight/: flight.rs  flight_selected.rs  flight_status.rs  flights.rs  mod.rs
ui/src/flight_implementation/: flight.rs  flight_selected.rs  flight_status.rs  flights.rs  mod.rs
ui/src/panels/: information.rs  map.rs  mod.rs  windows.rs
ui/src/thread_pool/: thread_pool.rs
ui/src/utils/: consistency_level.rs  frame.rs  mod.rs  system_functions.rs  types_to_bytes.rs
(+299 files in other folders)
