[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
eframe = "0.29.1"
num_cpus = "1.16.0"
walkers = "0.25.0"

tokio = { version = "1", features = ["full"] }
rustls = "0.23.18"
tokio-rustls = "0.26.0"
rustls-pki-types = "1.10.0"
webpki-roots = "0.26"

[profile.dev]
debug = true